--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "CodeIgniter"]
-	path = CodeIgniter
+[submodule ".codeigniter"]
+	path = .codeigniter
 	url = git://github.com/EllisLab/CodeIgniter.git
