Making repo compatible with Pagoda Box

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
-RewriteEngine on
-RewriteBase /
-RewriteCond $1 !^/(index\.php|assets|favicon\.ico|robots\.txt)
-RewriteRule ^(.*)$ /index.php/$1 [L]
+<IfModule mod_rewrite.c>
+  RewriteEngine on
+  RewriteBase /
+  RewriteCond $1 !^(index\.php|assets|favicon\.ico|robots\.txt)
+  RewriteRule ^(.*)$ /index.php/$1 [L]
+</IfModule>
