Added monolog package. Added custom log directory. Logging worker activity.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "bca/curl": "2.1.2",
-        "phpseclib/phpseclib": "0.3.*"
+        "phpseclib/phpseclib": "0.3.*",
+        "monolog/monolog": "1.2.*"
     }
 }
